syntax = "proto3";

package powerssl.api.v1;

import "google/protobuf/empty.proto";
import "api/v1/meta.proto";

option go_package = "powerssl.io/pkg/api/v1;api";

service CertificateService {
  rpc Create(CreateCertificateRequest) returns (Certificate) {
  }
  rpc Delete(DeleteCertificatRequest)
      returns (google.protobuf.Empty) {
  }
  rpc Get(GetCertificateRequest) returns (Certificate) {
  }
  rpc List(ListCertificateRequest)
      returns (ListCertificateResponse) {
  }
  rpc Update(UpdateCertificateRequest) returns (Certificate) {
  }
}

message CreateCertificateRequest {
  Certificate certificate_authority = 1;
}

message DeleteCertificatRequest {
  string name = 1;
}

message GetCertificateRequest {
  string name = 1;
}

message ListCertificateRequest {
}

message ListCertificateResponse {
  TypeMeta type_meta = 1;
  ListMeta list_meta = 2;

  repeated Certificate items = 3;
}

message UpdateCertificateRequest {
  Certificate certificate_authority = 1;
}

message Certificate {
  TypeMeta type_meta = 1;
  ObjectMeta object_meta = 2;

  CertificateSpec spec = 3;
  CertificateStatus status = 4;
}

message CertificateSpec {
  string common_name = 1;
  string encryption_algorithm = 2;
  int32 key_size = 3;
  string signature_algorithm = 4;
  bool auto_renew = 5;
}

message CertificateStatus {
  string phase = 1;
}
